added view controller v2