@@ -4,7 +4,8 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Locale;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -20,15 +21,15 @@ class ItemMapper {
                     .id(UUID.randomUUID())
                     .description(dto.getDescription())
                     .shortDescription(dto.getShortDescription())
-                    .link(new URL(dto.getLink()))
+                    .link(new URI(dto.getLink()).toURL())
                     .category(dto.getCategory())
                     .frameworks(Stream.of(dto.getFrameworks().split(","))
                             .map(String::trim)
                             .map(item -> item.toLowerCase(Locale.ROOT))
                             .collect(Collectors.toSet()))
                     .build();
-        } catch (MalformedURLException exception) {
-            log.error("MalformedURLException occur, exc msg: {}", exception.getMessage());
+        } catch (MalformedURLException | URISyntaxException exception) {
+            log.error("MalformedURLException | URISyntaxException occur, exc msg: {}", exception.getMessage());
             throw new RuntimeException(exception.getMessage());
         }
     }
@@ -39,15 +40,15 @@ class ItemMapper {
                     .id(id)
                     .description(dto.getDescription())
                     .shortDescription(dto.getShortDescription())
-                    .link(new URL(dto.getLink()))
+                    .link(new URI(dto.getLink()).toURL())
                     .category(dto.getCategory())
                     .frameworks(Stream.of(dto.getFrameworks().split(","))
                             .map(String::trim)
                             .map(item -> item.toLowerCase(Locale.ROOT))
                             .collect(Collectors.toSet()))
                     .build();
-        } catch (MalformedURLException exception) {
-            log.error("MalformedURLException occur, exc msg: {}", exception.getMessage());
+        } catch (MalformedURLException | URISyntaxException exception) {
+            log.error("MalformedURLException | URISyntaxException occur, exc msg: {}", exception.getMessage());
             throw new RuntimeException(exception.getMessage());
         }
     }
@@ -58,8 +59,7 @@ class ItemMapper {
                 .shortDescription(item.getShortDescription())
                 .link(item.getLink().toString())
                 .category(item.getCategory())
-                .frameworks(item.getFrameworks().stream()
-                        .collect(Collectors.joining(", ")))
+                .frameworks(String.join(", ", item.getFrameworks()))
                 .build();
     }
 }
